# Splines

./: .gitignore  .gitmodules  CMakeLists.txt  MODERNIZATION.md  README.md  build.ps1  build.sh  test17_cubic.csv  test17_cubic.json  test17_cubic.yaml  test17_quintic.csv  test17_quintic.json  test17_quintic.yaml
.github/workflows/: ci.yml  coverage.yml
3rd/: XOptima_UserObjects_Splines.mpl
benchmarks/: bench_eval.cc
doc_quintic/: doc_quintic.tex
include/Splines/: SplineAkima.hxx  SplineBiCubic.hxx  SplineBiCubicBase.hxx  SplineBiQuintic.hxx  SplineBiQuinticBase.hxx  SplineBilinear.hxx  SplineBuild.hxx  SplineConstant.hxx  SplineCubic.hxx  SplineCubicBase.hxx  SplineHermite.hxx  SplineLinear.hxx  SplinePchip.hxx  SplineQuintic.hxx  SplineQuinticBase.hxx  SplineSet.hxx  SplineSet_eval2_gc.hxx  SplineSet_eval2_ss.hxx  SplineSet_eval_xs.hxx  SplineSet_eval_xv.hxx  SplineSurf.hxx  SplineVanLeer.hxx  SplineVec.hxx  Splines.hh  Splines1D.hxx  Splines1Dblend.hxx  Splines2D.hxx  SplinesConfig.hh
src/: SplineAkima.cc  SplineAkima2D.cc  SplineBessel.cc  SplineBiCubic.cc  SplineBiCubicBase.cc  SplineBiQuintic.cc  SplineBiQuinticBase.cc  SplineBilinear.cc  SplineBuild.cc  SplineConstant.cc  SplineCubic.cc  SplineCubicBase.cc  SplineHermite.cc  SplineLinear.cc  SplineParametrization.cc  SplinePchip.cc  SplineQuintic.cc  SplineQuinticBase.cc  SplineSet.cc  SplineSetGC.cc  SplineSurf.cc  SplineUtils.cc  SplineVanLeer.cc  SplineVec.cc  Splines.cc  Splines.hh  Splines1D.cc  Splines1Dblend.cc  Splines2D.cc  Splines2Dblend.cc  SplinesBivariate.cc  SplinesCinterface.cc  SplinesConfig.hh  SplinesUtils.cc  SplinesUtils.hh
src/Splines/: SplineAkima.hxx  SplineAkima2D.hxx  SplineBessel.hxx  SplineBiCubic.hxx  SplineBiCubicBase.hxx  SplineBiQuintic.hxx  SplineBiQuinticBase.hxx  SplineBilinear.hxx  SplineBuild.hxx  SplineConstant.hxx  SplineCubic.hxx  SplineCubicBase.hxx  SplineHermite.hxx  SplineLinear.hxx  SplineParametrization.hxx  SplinePatch.hxx  SplinePchip.hxx  SplineQuintic.hxx  SplineQuinticBase.hxx  SplineSet.hxx  SplineSet_build.hxx  SplineSet_eval.hxx  SplineSet_eval2_gc.hxx  SplineSet_eval2_ii.hxx  SplineSet_eval2_ss.hxx  SplineSet_eval2_sv.hxx  SplineSet_eval2_v.hxx  SplineSet_eval_gc.hxx  SplineSet_eval_xs.hxx  SplineSet_eval_xsv.hxx  SplineSet_eval_xv.hxx  SplineSet_setup.hxx  SplineSurf.hxx  SplineUtils.hxx  SplineVanLeer.hxx  SplineVec.hxx  Splines1D.hxx  Splines1Dblend.hxx  Splines2D.hxx  Splines2Dblend.hxx
src_python_interface/: CMakeLists.txt  README.md  environment.yml  test_splines.py
src_python_interface/include/: py-AkimaSplines.hh  py-BesselSplines.hh  py-ConstantSplines.hh  py-CubicSplines.hh  py-HermiteSplines.hh  py-LinearSplines.hh  py-PchipSplines.hh  py-QuinticSplines.hh  py-Splines.hh  py-VanLeerSplines.hh
src_python_interface/src/: py-AkimaSplines.cc  py-BesselSplines.cc  py-ConstantSplines.cc  py-CubicSplines.cc  py-HermiteSplines.cc  py-LinearSplines.cc  py-PchipSplines.cc  py-QuinticSplines.cc  py-Splines.cc  py-VanLeerSplines.cc
src_tests/: test00.cc  test01.cc  test02.cc  test03.cc  test04.cc  test05.cc  test06.cc  test07.cc  test08.cc  test09.cc  test10.cc  test11.cc  test12.cc  test13.cc  test14.cc  test15.cc  test16.cc  test17.cc  test18.cc
toolbox/: CMakeLists.txt  CMakeLists2.txt
toolbox/cmake_utils/: Rakefile_common.rb
toolbox/src_mex/: GenericContainerInterface_matlab.cc  GenericContainerMatlabInterface.cc  README_matlab_interface.md  mex_BaseHermiteMexWrapper.cc  mex_Spline1DMexWrapper.cc  mex_Spline1DblendMexWrapper.cc  mex_Spline2DMexWrapper.cc  mex_Spline2DblendMexWrapper.cc  mex_SplineSetMexWrapper.cc  mex_SplineVecMexWrapper.cc
toolbox/tests/: Splines_test1.m  Splines_test10.m  Splines_test11.m  Splines_test12.m  Splines_test13.m  Splines_test14.m  Splines_test2.m  Splines_test3.m  Splines_test5.m  Splines_test7.m  Splines_test8.m  test_surf.json
